# agi-education-agent

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  dev.sh  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURE.md  IMPLEMENTATION_ROADMAP.md  PRD.md  SYSTEM_DESIGN.md  TECHNICAL_DESIGN.md
docs/audits/: AUDIT_F03_F01_MEMORY_TUTORING.md  AUDIT_F04_F05_ASSESSMENT.md  AUDIT_F07_F08_SESSION_AUTH.md  AUDIT_F11_F02_DOCUMENT_RAG.md  AUDIT_F12_F14_ANALYTICS_PATHS.md
docs/features/: F01_ADAPTIVE_TUTORING.md  F02_RAG_KNOWLEDGE.md  F03_STUDENT_MEMORY.md  F04_F05_ASSESSMENT_AND_GRADING.md  F06_VOICE_SYSTEM.md  F07_F08_SESSION_AND_AUTH.md  F09_AVATAR_PRESENTATION.md  F10_SIGN_LANGUAGE.md  F11_DOCUMENT_PROCESSING.md  F12_ANALYTICS_DASHBOARD.md  F13_TEACHER_DASHBOARD.md  F14_LEARNING_PATH.md  F15_F20_TIER3_SCALE_FEATURES.md
docs/plans/: PLAN_F03_F01_MEMORY_TUTORING.md  PLAN_F04_F05_ASSESSMENT.md  PLAN_F07_F08_SESSION_AUTH.md  PLAN_F11_F02_DOCUMENT_RAG.md  PLAN_F12_F14_ANALYTICS_PATHS.md
frontend/: package-lock.json  package.json
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_assessment_tables.py  003_document_tables.py  004_mastery_tables.py  007_add_indexes.py  (+2 more)
scripts/: seed_users.py
src/: config.py
tests/: conftest.py  test_analytics.py  test_assessment.py  test_auth.py  test_documents.py  test_health.py  test_learning_path.py  test_llm_factory.py  test_mastery.py  test_memory_enhanced.py  test_rate_limit.py  test_rbac.py  test_session_auth.py  test_session_enhanced.py  test_spaced_repetition.py  test_tutor_enhanced.py
(+133 files in other folders)
